<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".presentation.filters_screen.FiltersFragment">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/categoryButtons"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filtersToolBar">

        <Button
            android:id="@+id/popularButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular" />

        <Button
            android:id="@+id/newButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_news" />

        <Button
            android:id="@+id/relevantButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relevant" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/filtersToolBar"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="@color/background_color"
        android:paddingStart="4dp"
        android:paddingTop="8dp"
        android:paddingEnd="4dp"
        android:paddingBottom="8dp"
        android:titleMarginStart="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/filters"
            android:textAppearance="@style/Theme.AppCompat.NoActionBar"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <ImageButton
            android:id="@+id/checkButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginEnd="6dp"
            android:backgroundTint="@color/background_color"
            android:contentDescription="@string/app_name"
            android:src="@drawable/check_icon" />

        <ImageButton
            android:id="@+id/arrowBackButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:layout_marginEnd="6dp"
            android:backgroundTint="@color/background_color"
            android:contentDescription="@string/app_name"
            android:src="@drawable/arrow_back_icon" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/date"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/chooseDateTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chooseDateTextView" />

    <TextView
        android:id="@+id/chooseDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_date"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@id/calendarImageButton"
        app:layout_constraintEnd_toStartOf="@+id/calendarImageButton"
        app:layout_constraintTop_toTopOf="@id/calendarImageButton" />

    <ImageButton
        android:id="@+id/calendarImageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/calendar_image_button"
        android:src="@drawable/calendar_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryButtons" />

    <TextView
        android:id="@+id/languageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/language"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendarImageButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/russianLanguageButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        android:paddingEnd="12dp"
        android:paddingBottom="6dp"
        android:text="@string/russian_language"
        android:textAllCaps="false"
        android:textColor="#40484B"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/languageTextView"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/englishLanguageButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/english_language"
        android:textAllCaps="false"
        android:textColor="#40484B"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toEndOf="@id/russianLanguageButton"
        app:layout_constraintTop_toTopOf="@id/russianLanguageButton"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deutschLanguageButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/deutsch_language"
        android:textAllCaps="false"
        android:textColor="#40484B"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toEndOf="@id/englishLanguageButton"
        app:layout_constraintTop_toTopOf="@+id/russianLanguageButton"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>