<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:backgroundTint="@color/background_color">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/background_color"
            app:expandedTitleMarginEnd="16dp"
            app:expandedTitleMarginStart="16dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/articleThumbnail"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:contentDescription="@string/article_thumbnail_description"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <ImageButton
                android:id="@+id/favoriteButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="top|end"
                android:layout_margin="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/saved"
                android:src="@drawable/favorite_icon"
                app:layout_collapseMode="pin" />

            <ImageButton
                android:id="@+id/arrowBackButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="top|start"
                android:layout_margin="16dp"
                android:contentDescription="@string/arrow_back_button"
                app:layout_collapseMode="pin"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/arrow_back_icon" />

            <TextView
                android:id="@+id/collapsedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="visible"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".presentation.article_screen.ArticleFragment">

            <TextView
                android:id="@+id/articleTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:textColor="#1F1F1F"
                android:textSize="16sp"
                tools:text="Article title" />

            <TextView
                android:id="@+id/articleDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:textColor="#40484B"
                android:textSize="14sp"
                tools:text="Article date" />

            <TextView
                android:id="@+id/articleSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="12dp"
                android:textColor="#40484B"
                tools:text="Article source" />

            <TextView
                android:id="@+id/articleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="#191C1D"
                android:textSize="16sp"
                tools:text="Article text" />
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>